@@ -28,7 +28,7 @@
 $modversion['name']           = _MI_COUNTDOWN_NAME;
 $modversion['version']        = '0.3';
 $modversion['module_status']  = 'Alpha 2';
-$modversion['release_date']   = '2020/05/03';
+$modversion['release_date']   = '2020/05/04';
 $modversion['description']    = _MI_COUNTDOWN_DESC;
 $modversion['credits']        = 'Eric Juden (ejuden01)';
 $modversion['author']         = 'Alan Juden (ajuden)';
